--- a/AUTHORS
+++ b/AUTHORS
@@ -38,6 +38,7 @@ Kamil Rytarowski <krytarowski@gmail.com>
 Ma Aiguo <maaiguo@uniontech.com>
 Martijn Croonen <martijn@martijnc.be>
 Matej Knopp <matej.knopp@gmail.com>
+Matt Jolly <kangie@gentoo.org>
 Michael Gilbert <floppymaster@gmail.com>
 Milko Leporis <milko.leporis@imgtec.com>
 Mohan Reddy <mohan.reddy@samsung.com>
